--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dspy>=3.1.3",
+    "mlflow>=3.9.0",
     "pydantic-monty>=0.0.5",
+    "python-dotenv>=1.2.1",
 ]
 
 [dependency-groups]
